<resources>
    <string name="app_name">EpicBurger</string>
    <!--Activity titles-->
    <string name="burgers">Burgers</string>
    <string name="rolls">Rolls</string>
    <string name="desserts">Desserts</string>
    <string name="drinks">Drinks</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="email">www.epicburger.com</string>
    <string name="orders">Orders</string>
    <string name="order_detail">Order detail</string>

    <string name="nav_new">New</string>
    <string name="nav_burgers">Burgers</string>
    <string name="nav_desserts">Desserts</string>
    <string name="nav_drinks">Drinks</string>
    <string name="nav_rolls">Rolls</string>
    <string name="nav_user_name">User name</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_support">Support</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Give us feedback</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="menu_cost">$0.00</string>
    <string name="action_share">Share</string>

    <string name="title_cheeseburgers">Cheeseburgers</string>
    <string name="title_chickenburgers">Chickenburgers</string>

    <string-array name="cheese_burgers">
        <item>Cheeseburger 1</item>
        <item>Cheeseburger 2</item>
        <item>Cheeseburger 3</item>
        <item>Cheeseburger 4</item>
    </string-array>

    <string-array name="chicken_burgers">
        <item>Chickenburger 1</item>
        <item>Chickenburger 2</item>
        <item>Chickenburger 3</item>
        <item>Chickenburger 4</item>
    </string-array>

    <string name="restaurant_image">Restaurant image</string>
    <string name="new_text">New items and promotions will be displayed here!</string>

    <string name="detail_name">Detail name</string>
    <string name="detail_cost">Detail cost</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="favorite">Favorite</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="order_is_done">Order is done!</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>