<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_user_name">
        <menu>
            <item android:id="@+id/nav_order"
                android:icon="@drawable/ic_order"
                android:title="@string/nav_order"/>

            <item android:id="@+id/nav_favorite"
                android:icon="@drawable/ic_favorite"
                android:title="@string/nav_favorite"/>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_new"
            android:icon="@drawable/ic_new"
            android:title="@string/nav_new"
            android:checked="true"/>

        <item android:id="@+id/nav_burgers"
            android:icon="@drawable/ic_burger"
            android:title="@string/nav_burgers"/>

        <item android:id="@+id/nav_desserts"
            android:icon="@drawable/ic_dessert"
            android:title="@string/nav_desserts"/>

        <item android:id="@+id/nav_drinks"
            android:icon="@drawable/ic_drink"
            android:title="@string/nav_drinks"/>

        <item android:id="@+id/nav_rolls"
            android:icon="@drawable/ic_roll"
            android:title="@string/nav_rolls"/>
    </group>



    <item android:title="@string/nav_support">
        <menu>
            <item android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help"/>

            <item android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback"/>
        </menu>
    </item>
</menu>